// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept custom classes thru classes prop 1`] = `
<Primary
  accounts={
    Array [
      Object {
        "value": "main fund",
      },
    ]
  }
  active={false}
  changeAmount={[Function]}
  changeFund={[Function]}
  classes="test1 test2"
  fundId="test"
  preFill={[Function]}
>
  <div>
    <h3
      className="text-dark-primary display-inline-block push-half-bottom push-half-right"
    >
      I'd like to give
    </h3>
    <Input
      classes={
        Array [
          "soft-bottom",
          "input--active",
          "display-inline-block",
        ]
      }
      defaultValue={undefined}
      format={[Function]}
      hideLabel={true}
      inputClasses="outlined--dotted outlined--light h3 hard-top flush-bottom text-brand show-placeholder_11ef8g5"
      pattern="[0-9]*"
      placeholder="0.00"
      step="0.01"
      style={
        Object {
          "maxWidth": "150px",
          "paddingLeft": ".8em",
        }
      }
      type="tel"
    >
      <div
        className="input soft-bottom input--active display-inline-block"
        data-spec="input-wrapper"
        style={
          Object {
            "maxWidth": "150px",
            "paddingLeft": ".8em",
          }
        }
      >
        <RenderLabel
          disabled={undefined}
          hideLabel={true}
          id={undefined}
          label={undefined}
          name={undefined}
          style={undefined}
        />
        <span
          className="
        dollar--icon
        hard-top
        flush-bottom
        text-brand"
        >
          <input
            autoCapitalize="on"
            autoComplete="on"
            autoCorrect="on"
            className="outlined--dotted outlined--light h3 hard-top flush-bottom text-brand show-placeholder_11ef8g5"
            data-lpignore={undefined}
            data-spec="input"
            defaultValue={undefined}
            disabled={undefined}
            id={undefined}
            maxLength=""
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            pattern="[0-9]*"
            placeholder="0.00"
            readOnly={undefined}
            spellCheck={undefined}
            step="0.01"
            style={
              Object {
                "maxWidth": "150px",
                "paddingLeft": ".8em",
              }
            }
            type="tel"
          />
        </span>
      </div>
    </Input>
    <h3
      className="text-dark-primary display-inline-block push-half-bottom push-half-right"
    >
      to
    </h3>
    <style>
      .input--active select { color: #6bac43 }
    </style>
    <Select
      classes={
        Array [
          "soft-bottom",
          "display-inline-block",
          "select_1rryh47",
        ]
      }
      hideLabel={true}
      inputClasses="text-dark-tertiary outlined--dotted outlined--light h3 hard-top flush-bottom"
      items={
        Array [
          Object {
            "value": "main fund",
          },
        ]
      }
      name="select-account"
      onChange={[Function]}
      placeholder="select fund"
      selected="test"
    >
      <div
        className="input soft-bottom display-inline-block select_1rryh47 input--active select_e8htpf"
      >
        <select
          className="text-dark-tertiary outlined--dotted outlined--light h3 hard-top flush-bottom"
          disabled={undefined}
          id="select-account"
          name="select-account"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="select fund"
          style={undefined}
          value="test"
        >
          <option
            style={
              Object {
                "display": "none",
              }
            }
          >
            select fund
          </option>
          <option
            className={undefined}
            key="0"
            value="main fund"
          >
            main fund
          </option>
        </select>
      </div>
    </Select>
  </div>
</Primary>
`;

exports[`should accept multiple accounts through accounts prop 1`] = `
<Primary
  accounts={
    Array [
      Object {
        "value": "hello",
      },
      Object {
        "value": "world",
      },
    ]
  }
  active={false}
  changeAmount={[Function]}
  changeFund={[Function]}
  fundId="test"
  preFill={[Function]}
>
  <div>
    <h3
      className="text-dark-primary display-inline-block push-half-bottom push-half-right"
    >
      I'd like to give
    </h3>
    <Input
      classes={
        Array [
          "soft-bottom",
          "input--active",
          "display-inline-block",
        ]
      }
      defaultValue={undefined}
      format={[Function]}
      hideLabel={true}
      inputClasses="outlined--dotted outlined--light h3 hard-top flush-bottom text-brand show-placeholder_11ef8g5"
      pattern="[0-9]*"
      placeholder="0.00"
      step="0.01"
      style={
        Object {
          "maxWidth": "150px",
          "paddingLeft": ".8em",
        }
      }
      type="tel"
    >
      <div
        className="input soft-bottom input--active display-inline-block"
        data-spec="input-wrapper"
        style={
          Object {
            "maxWidth": "150px",
            "paddingLeft": ".8em",
          }
        }
      >
        <RenderLabel
          disabled={undefined}
          hideLabel={true}
          id={undefined}
          label={undefined}
          name={undefined}
          style={undefined}
        />
        <span
          className="
        dollar--icon
        hard-top
        flush-bottom
        text-brand"
        >
          <input
            autoCapitalize="on"
            autoComplete="on"
            autoCorrect="on"
            className="outlined--dotted outlined--light h3 hard-top flush-bottom text-brand show-placeholder_11ef8g5"
            data-lpignore={undefined}
            data-spec="input"
            defaultValue={undefined}
            disabled={undefined}
            id={undefined}
            maxLength=""
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            pattern="[0-9]*"
            placeholder="0.00"
            readOnly={undefined}
            spellCheck={undefined}
            step="0.01"
            style={
              Object {
                "maxWidth": "150px",
                "paddingLeft": ".8em",
              }
            }
            type="tel"
          />
        </span>
      </div>
    </Input>
    <h3
      className="text-dark-primary display-inline-block push-half-bottom push-half-right"
    >
      to
    </h3>
    <style>
      .input--active select { color: #6bac43 }
    </style>
    <Select
      classes={
        Array [
          "soft-bottom",
          "display-inline-block",
          "select_1rryh47",
        ]
      }
      hideLabel={true}
      inputClasses="text-dark-tertiary outlined--dotted outlined--light h3 hard-top flush-bottom"
      items={
        Array [
          Object {
            "value": "hello",
          },
          Object {
            "value": "world",
          },
        ]
      }
      name="select-account"
      onChange={[Function]}
      placeholder="select fund"
      selected="test"
    >
      <div
        className="input soft-bottom display-inline-block select_1rryh47 input--active select_e8htpf"
      >
        <select
          className="text-dark-tertiary outlined--dotted outlined--light h3 hard-top flush-bottom"
          disabled={undefined}
          id="select-account"
          name="select-account"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="select fund"
          style={undefined}
          value="test"
        >
          <option
            style={
              Object {
                "display": "none",
              }
            }
          >
            select fund
          </option>
          <option
            className={undefined}
            key="0"
            value="hello"
          >
            hello
          </option>
          <option
            className={undefined}
            key="1"
            value="world"
          >
            world
          </option>
        </select>
      </div>
    </Select>
  </div>
</Primary>
`;

exports[`should change classes based on active state 1`] = `
<Primary
  accounts={
    Array [
      Object {
        "value": "main fund",
      },
    ]
  }
  active={true}
  changeAmount={[Function]}
  changeFund={[Function]}
  fundId="test"
  preFill={[Function]}
>
  <div>
    <h3
      className="text-dark-primary display-inline-block push-half-bottom push-half-right"
    >
      I'd like to give
    </h3>
    <Input
      classes={
        Array [
          "soft-bottom",
          "input--active",
          "display-inline-block",
        ]
      }
      defaultValue={undefined}
      format={[Function]}
      hideLabel={true}
      inputClasses="outlined--dotted outlined--light h3 hard-top flush-bottom text-brand show-placeholder_11ef8g5"
      pattern="[0-9]*"
      placeholder="0.00"
      step="0.01"
      style={
        Object {
          "maxWidth": "150px",
          "paddingLeft": ".8em",
        }
      }
      type="tel"
    >
      <div
        className="input soft-bottom input--active display-inline-block"
        data-spec="input-wrapper"
        style={
          Object {
            "maxWidth": "150px",
            "paddingLeft": ".8em",
          }
        }
      >
        <RenderLabel
          disabled={undefined}
          hideLabel={true}
          id={undefined}
          label={undefined}
          name={undefined}
          style={undefined}
        />
        <span
          className="
        dollar--icon
        hard-top
        flush-bottom
        text-brand"
        >
          <input
            autoCapitalize="on"
            autoComplete="on"
            autoCorrect="on"
            className="outlined--dotted outlined--light h3 hard-top flush-bottom text-brand show-placeholder_11ef8g5"
            data-lpignore={undefined}
            data-spec="input"
            defaultValue={undefined}
            disabled={undefined}
            id={undefined}
            maxLength=""
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            pattern="[0-9]*"
            placeholder="0.00"
            readOnly={undefined}
            spellCheck={undefined}
            step="0.01"
            style={
              Object {
                "maxWidth": "150px",
                "paddingLeft": ".8em",
              }
            }
            type="tel"
          />
        </span>
      </div>
    </Input>
    <h3
      className="text-dark-primary display-inline-block push-half-bottom push-half-right"
    >
      to
    </h3>
    <style>
      .input--active select { color: #6bac43 }
    </style>
    <Select
      classes={
        Array [
          "soft-bottom",
          "display-inline-block",
          "select_1rryh47",
        ]
      }
      hideLabel={true}
      inputClasses="text-primary outlined--dotted outlined--light h3 hard-top flush-bottom"
      items={
        Array [
          Object {
            "value": "main fund",
          },
        ]
      }
      name="select-account"
      onChange={[Function]}
      placeholder="select fund"
      selected="test"
    >
      <div
        className="input soft-bottom display-inline-block select_1rryh47 input--active select_e8htpf"
      >
        <select
          className="text-primary outlined--dotted outlined--light h3 hard-top flush-bottom"
          disabled={undefined}
          id="select-account"
          name="select-account"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="select fund"
          style={undefined}
          value="test"
        >
          <option
            style={
              Object {
                "display": "none",
              }
            }
          >
            select fund
          </option>
          <option
            className={undefined}
            key="0"
            value="main fund"
          >
            main fund
          </option>
        </select>
      </div>
    </Select>
  </div>
</Primary>
`;

exports[`should render with minimal props 1`] = `
<Primary
  accounts={
    Array [
      Object {
        "value": "main fund",
      },
    ]
  }
  active={false}
  changeAmount={[Function]}
  changeFund={[Function]}
  fundId="test"
  preFill={[Function]}
>
  <div>
    <h3
      className="text-dark-primary display-inline-block push-half-bottom push-half-right"
    >
      I'd like to give
    </h3>
    <Input
      classes={
        Array [
          "soft-bottom",
          "input--active",
          "display-inline-block",
        ]
      }
      defaultValue={undefined}
      format={[Function]}
      hideLabel={true}
      inputClasses="outlined--dotted outlined--light h3 hard-top flush-bottom text-brand show-placeholder_11ef8g5"
      pattern="[0-9]*"
      placeholder="0.00"
      step="0.01"
      style={
        Object {
          "maxWidth": "150px",
          "paddingLeft": ".8em",
        }
      }
      type="tel"
    >
      <div
        className="input soft-bottom input--active display-inline-block"
        data-spec="input-wrapper"
        style={
          Object {
            "maxWidth": "150px",
            "paddingLeft": ".8em",
          }
        }
      >
        <RenderLabel
          disabled={undefined}
          hideLabel={true}
          id={undefined}
          label={undefined}
          name={undefined}
          style={undefined}
        />
        <span
          className="
        dollar--icon
        hard-top
        flush-bottom
        text-brand"
        >
          <input
            autoCapitalize="on"
            autoComplete="on"
            autoCorrect="on"
            className="outlined--dotted outlined--light h3 hard-top flush-bottom text-brand show-placeholder_11ef8g5"
            data-lpignore={undefined}
            data-spec="input"
            defaultValue={undefined}
            disabled={undefined}
            id={undefined}
            maxLength=""
            name={undefined}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            pattern="[0-9]*"
            placeholder="0.00"
            readOnly={undefined}
            spellCheck={undefined}
            step="0.01"
            style={
              Object {
                "maxWidth": "150px",
                "paddingLeft": ".8em",
              }
            }
            type="tel"
          />
        </span>
      </div>
    </Input>
    <h3
      className="text-dark-primary display-inline-block push-half-bottom push-half-right"
    >
      to
    </h3>
    <style>
      .input--active select { color: #6bac43 }
    </style>
    <Select
      classes={
        Array [
          "soft-bottom",
          "display-inline-block",
          "select_1rryh47",
        ]
      }
      hideLabel={true}
      inputClasses="text-dark-tertiary outlined--dotted outlined--light h3 hard-top flush-bottom"
      items={
        Array [
          Object {
            "value": "main fund",
          },
        ]
      }
      name="select-account"
      onChange={[Function]}
      placeholder="select fund"
      selected="test"
    >
      <div
        className="input soft-bottom display-inline-block select_1rryh47 input--active select_e8htpf"
      >
        <select
          className="text-dark-tertiary outlined--dotted outlined--light h3 hard-top flush-bottom"
          disabled={undefined}
          id="select-account"
          name="select-account"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="select fund"
          style={undefined}
          value="test"
        >
          <option
            style={
              Object {
                "display": "none",
              }
            }
          >
            select fund
          </option>
          <option
            className={undefined}
            key="0"
            value="main fund"
          >
            main fund
          </option>
        </select>
      </div>
    </Select>
  </div>
</Primary>
`;
